# cc-CMake

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/program1/: CMakeLists.txt
src/program2/: CMakeLists.txt
src/program3/: CMakeLists.txt
src/program4/: CMakeLists.txt
src/shared/: CMakeLists.txt
tests/: CMakeLists.txt
tests/test1/: CMakeLists.txt
tests/test2/: CMakeLists.txt
tests/test2/src/: test1.c
